Fix instance preview alignment

--- a/src/scripts/components/h5peditor-portfolio-placeholder-layout-button.scss
+++ b/src/scripts/components/h5peditor-portfolio-placeholder-layout-button.scss
@@ -52,6 +52,7 @@
     left: 0;
     overflow: hidden;
     position: absolute;
+    text-align: left;
     top: 0;
     width: 100%;
 
